# langchain-project-with-llama2

./: .gitignore  README.md  pyproject.toml
ollama_langchain/: app.py  db_connection.py  embedding_tool.py  main.py
src/: app.py
tests/: __test_connection.py
