[tool.poetry]
name = "ollama-langchain"
version = "0.1.0"
description = ""
authors = ["Manuelji <manueljl22@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.0.353"
llama-index = "^0.9.23"
streamlit = "^1.29.0"
vecs = "^0.4.2"
datasets = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
